# flatmap-haskell-workshop

./: AllTests.hs  E06_BinTree.hs  README.md  flatmap-haskell-workshop.cabal
Tests/: BinTreeTests.hs
