name:                flatmap-haskell-workshop
version:             1.0.0.0
author:              Tobias G. Waaler, Erlend Hamberg, Runar Furenes
maintainer:          erlend@hamberg.no
category:            Educational
build-type:          Simple

extra-source-files:  README.md
cabal-version:       >= 1.10

executable all
  default-language:    Haskell2010
  main-is:             AllTests.hs
  build-depends:       base >= 4.6 && < 4.8,
                       QuickCheck,
                       hspec
